fixed clear shearch button spacing and panel pading on Asset Dashboard page

--- a/ooiui/static/css/common/assets.css
+++ b/ooiui/static/css/common/assets.css
@@ -32,9 +32,6 @@ div.panel-heading {
     margin-left: 10px;
 }
 
-#search {
-    margin-top: 5px;
-}
 /* helpful formatting classes */
 . {
     min-height: 360px;
